force-app/main/default/objects/Sales_Volume_Detail__c/Sales_Volume_Detail__c.object-meta.xml
<CustomObject>
    <label>Sales Volume Detail</label>
    <nameField>
        <displayFormat>D{000000}</displayFormat>
        <label>Sales Volume Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Volume Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>