force-app/main/default/objects/Sales_Volume_Detail__c/fields/R_MDS__c.field-meta.xml
<CustomField>
    <fullName>R_MDS__c</fullName>
    <label>MDS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>