force-app/main/default/objects/Sales_Volume_Detail__c/fields/R_MinDakCa__c.field-meta.xml
<CustomField>
    <fullName>R_MinDakCa__c</fullName>
    <label>MinDakCa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>