force-app/main/default/objects/Sales_Volume_Detail__c/fields/R_SCB__c.field-meta.xml
<CustomField>
    <fullName>R_SCB__c</fullName>
    <label>SCB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>