force-app/main/default/objects/Sales_Volume_Detail__c/fields/R_West__c.field-meta.xml
<CustomField>
    <fullName>R_West__c</fullName>
    <label>West</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>