force-app/main/default/objects/Sales_Volume_Detail__c/fields/Sales_Volume_Estimation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Volume_Estimation__c</fullName>
    <label>Sales Volume Estimation</label>
    <referenceTo>Sales_Volume_Estimation__c</referenceTo>
    <relationshipLabel>Volume Estimation Details</relationshipLabel>
    <relationshipName>Sales_Volume_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>