force-app/main/default/objects/Sales_Volume_Detail__c/fields/T_Conventional__c.field-meta.xml
<CustomField>
    <fullName>T_Conventional__c</fullName>
    <label>Conventional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>