force-app/main/default/objects/Sales_Volume_Detail__c/fields/T_GT__c.field-meta.xml
<CustomField>
    <fullName>T_GT__c</fullName>
    <label>GT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>