force-app/main/default/objects/Sales_Volume_Detail__c/fields/T_LL__c.field-meta.xml
<CustomField>
    <fullName>T_LL__c</fullName>
    <label>LL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>