force-app/main/default/objects/Sales_Volume_Detail__c/fields/T_LLG27__c.field-meta.xml
<CustomField>
    <fullName>T_LLG27__c</fullName>
    <label>LLG27</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>