force-app/main/default/objects/Sales_Volume_Detail__c/fields/T_RR2Y__c.field-meta.xml
<CustomField>
    <fullName>T_RR2Y__c</fullName>
    <label>RR2Y</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>