force-app/main/default/objects/Sales_Volume_Detail__c/fields/T_X_Flex__c.field-meta.xml
<CustomField>
    <fullName>T_X_Flex__c</fullName>
    <label>Xtend Flex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>