force-app/main/default/objects/Sales_Volume_Detail__c/fields/T_Xtend__c.field-meta.xml
<CustomField>
    <fullName>T_Xtend__c</fullName>
    <label>Xtend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>