force-app/main/default/objects/Sales_Volume_Detail__c/fields/Total_by_Technology__c.field-meta.xml
<CustomField>
    <fullName>Total_by_Technology__c</fullName>
    <formula>T_Enlist__c + T_GT__c + T_LL__c + T_LLG27__c + T_RR2Y__c + T_Xtend__c + T_X_Flex__c + T_Conventional__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total by Technology</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>