force-app/main/default/objects/Sales_Volume_Detail__c/fields/Volume_Estimation__c.field-meta.xml
<CustomField>
    <fullName>Volume_Estimation__c</fullName>
    <formula>Sales_Volume_Estimation__r.Estimate_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume Estimation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>