force-app/main/default/objects/Sales_Volume_Detail__c/recordTypes/By_Region.recordType-meta.xml
<RecordType>
    <fullName>By_Region</fullName>
    <active>true</active>
    <label>By Region</label>
</RecordType>