force-app/main/default/objects/Sales_Volume_Detail__c/recordTypes/By_Technology.recordType-meta.xml
<RecordType>
    <fullName>By_Technology</fullName>
    <active>true</active>
    <label>By Technology</label>
</RecordType>