force-app/main/default/objects/Sales_Volume_Detail__c/validationRules/Technology_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Technology_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name=&apos;By Technology&apos;,BLANKVALUE(T_LLG27__c,0)+
			BLANKVALUE(T_RR2Y__c,0)+
			BLANKVALUE(T_Xtend__c,0)+
			BLANKVALUE(T_X_Flex__c,0)+
			BLANKVALUE(T_Conventional__c,0)+
			BLANKVALUE(T_GT__c,0)+
			BLANKVALUE(T_Enlist__c,0)+
			BLANKVALUE(T_LL__c,0) &lt;&gt; 1)</errorConditionFormula>
    <errorMessage>All Technologies must add up to 100%</errorMessage>
</ValidationRule>